<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|start"
    android:padding="20dp"
    tools:context=".RegisterUser">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#2196F3"
        android:text="@string/title_one"
        android:textSize="15sp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_two"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass_one"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/edt_passwordagain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass_two"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Đăng nhập"
        android:textAllCaps="true"
        android:backgroundTint="#2196F3"
        />

    <Button
        android:id="@+id/btn_returnhome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Trở về"
        android:textAllCaps="true"
        android:backgroundTint="#654F4F"
        />
</LinearLayout>